--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -99,3 +99,52 @@ main {
   }
 }
 
+.user_profile {
+  display: flex;
+  @extend %shadow_block;
+  padding: 10px;
+  padding-top: 0px;
+  flex-direction: row;
+  margin-top: 25px;
+
+  .user_profile_text {
+    font-family: 'Inter', sans-serif;
+
+    .user_profile_text_name {
+      font-size: 16px;
+    }
+
+    .user_profile_text_city {
+      font-size: 14px;
+    }
+
+    .user_profile_text_description {
+      font-size: 12px;
+    }
+  }
+
+  .user_profile_info {
+    font-family: 'Inter', sans-serif;
+
+    .user_profile_info_rating {
+      font-size: 16px;
+      text-align: center;
+
+    }
+
+    img {
+      margin-top: 5px;
+      margin-bottom: 5px;
+      width: 150px;
+      height: 150px;
+      border-radius: 15px;
+    }
+
+    button {
+      width: 100%;
+      margin-bottom: 10px;
+      border: none;
+    }
+  }
+}
+
