--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap');
 
-%shadow_block{
-  box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 2px 6px 2px rgba(60,64,67,.15);
+%shadow_block {
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
   border-radius: 0.5rem;
   overflow: hidden;
+}
+
+input {
+  border: none;
+  background: none;
+  outline: none;
+  padding: 0;
 }
 
 h1 {
@@ -67,13 +74,29 @@ form {
 }
 
 main {
+  .orders_page_sort {
+    width: 80%;
+    @extend %shadow_block;
+    height: 35px;
+    margin-bottom: 20px;
+    align-items: center;
+    padding: 5px;
+    font-family: 'Inter', sans-serif;
+  }
+  .orders_page_nav{
+    display: flex;
+    justify-content: space-around;
+    margin: 0 auto;
+  }
+
   article {
+
     .order_block {
       @extend %shadow_block;
       padding: 10px;
       padding-top: 0px;
       font-family: 'Inter', sans-serif;
-
+      margin-top: 15px;
     }
 
     .order_block_detail {
