--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,9 @@ h1 {
   font-family: 'Inter', sans-serif;
   font-size: 21px;
 }
+h2{
+  font-family: 'Inter', sans-serif;
+}
 
 header {
   display: flex;
