--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,7 +20,10 @@ h1 {
 h2{
   font-family: 'Inter', sans-serif;
 }
-
+a{
+  text-decoration: none;
+  color: black;
+}
 header {
   display: flex;
   justify-content: space-between;
