--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -110,6 +110,10 @@ main {
       padding-top: 0px;
       font-family: 'Inter', sans-serif;
       margin-top: 15px;
+      img{
+        width: 300px;
+        height: 300px;
+      }
     }
 
     .order_block_detail {
