--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -249,8 +249,8 @@ main {
     img {
       margin-top: 5px;
       margin-bottom: 5px;
-      width: 150px;
-      height: 150px;
+      width: 100%;
+
       border-radius: 15px;
     }
 
