--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap');
 
+
+body{
+  width: 1240px;
+  margin: 0 auto;
+}
+@media only screen and (max-width: 600px) {
+  body {
+    width: 95%;
+  }
+}
 %shadow_block {
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
   border-radius: 0.5rem;
@@ -28,6 +38,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 15px;
 
   p {
     font-family: 'Inter', sans-serif;
@@ -91,7 +102,7 @@ main {
   }
   .orders_page_nav{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0 auto;
   }
 
@@ -324,5 +335,23 @@ main {
   button{
     width: 100%;
     margin-top: 10px;
+  }
+}
+
+.language_btn{
+  display: flex;
+  margin-top: 15px;
+  button{
+    margin-right: 5px;
+  }
+}
+.reg_btn{
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  width: 100%;
+  button{
+    align-items: center;
+    width: 100%;
   }
 }
