--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -198,6 +198,10 @@ main {
         width: 70px;
         height: 70px;
       }
+      .img_overlay {
+        width: 150px;
+        height: 1я50px;
+      }
     }
   }
 
@@ -345,13 +349,28 @@ main {
     margin-right: 5px;
   }
 }
-.reg_btn{
+.reg_btn {
   display: flex;
   flex-direction: column;
   margin-top: 15px;
   width: 100%;
-  button{
+
+  button {
     align-items: center;
     width: 100%;
   }
 }
+
+.bannedPage {
+
+  position: fixed;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  height: 1000px;
+  font-family: 'Inter', sans-serif;
+  background-color: red;
+  color: white;
+  font-size: 25px;
+}
+
