--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -75,6 +75,7 @@ form {
     border-radius: 10px;
     margin-bottom: 10px;
     height: 30px;
+    border: 1px solid ;
   }
 
   .mainBtn {
@@ -200,7 +201,7 @@ main {
       }
       .img_overlay {
         width: 150px;
-        height: 1я50px;
+        height: 150px;
       }
     }
   }
